--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^9.0.3",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.1.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.3",
     "@nestjs/swagger": "^6.0.4",
     "@prisma/client": "^4.1.1",
@@ -37,6 +38,8 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "http-status-codes": "^2.2.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -52,6 +55,7 @@
     "@types/jest": "28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.5",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
