--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,36 @@ services:
       - ./usr/src/app/node_modules
     env_file:
       - .env
+    networks:
+      - backend
+    restart: always
     # Run a command against the development stage of the image
     command: npm run start:dev
     ports:
       - ${PORT}:${PORT}
+    depends_on:
+      - postgres
+
+  postgres:
+    build:
+      context: .
+      dockerfile: postgres.Dockerfile
+    restart: always
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    networks:
+      - backend
+    volumes:
+      - postgresdata:/var/lib/postgresql/data
+
+volumes:
+  postgresdata:
+
+networks:
+  backend:
+    driver: bridge
