--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/platform-express": "^9.0.3",
     "@nestjs/swagger": "^6.0.4",
+    "@prisma/client": "^4.1.1",
     "bcrypt": "5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -60,6 +61,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "prisma": "^4.1.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
