--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run migration && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "docker:scan:api": "docker scan nodejs2022q2-service_api",
-    "docker:scan:postgres": "docker scan nodejs2022q2-service_postgres"
+    "docker:scan:postgres": "docker scan nodejs2022q2-service_postgres",
+    "migration": "npx prisma migrate dev"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.3",
